--- a/templates/edit.html
+++ b/templates/edit.html
@@ -57,6 +57,7 @@
         <label for="saatlik_ucret" class="form-label">Saatlik Ücret:</label>
         <input type="number" name="saatlik_ucret" id="saatlik_ucret" value="{{ record[5] }}" class="form-control" required>
       </div>
+      <button type="submit" class="btn btn-custom mt-3">Güncelle</button>
     </form>
     <div class="text-center mt-3">
       <a href="/" class="btn btn-secondary">İptal ve Ana Sayfaya Dön</a>
