--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kazanç Takip Sistemi</title>
+  <title>Pizza V Kurye Kazanç Takip Sistemi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -68,7 +68,7 @@
 </head>
 <body class="bg-light">
   <div class="container mt-5">
-    <h1 class="text-center header-green">Kazanç Takip Sistemi</h1>
+    <h1 class="text-center header-green">Pizza V Kurye Kazanç Takip Sistemi</h1>
     <h2 class="text-center text-success">Toplam Kazanç: {{ total_income|int }} TL</h2>
     <h4 class="text-center">
       1-15 Günlük: {{ total_income_1_15|int }} TL | 16-31 Günlük: {{ total_income_15_31|int }} TL
